--- a/blog/views/navbar.pug
+++ b/blog/views/navbar.pug
@@ -8,6 +8,15 @@ nav.navbar.is-primary
                 if userInfo
                     .navbar-item
                         a.has-text-white(href='/playlists') Playlists
+                unless hideLogIn
+                  .navbar-item
+                    .g-signin2(data-onsuccess='onSignIn')
+                if hideLogIn
+                  .navbar-item(id='signOut')
+                    a.button.is-dark(onclick='signOut()')
+                      span.icon
+                        i.fab.fa-google
+                      span='Log out'
                 .navbar-item
                     a.button.is-dark(href=`${userInfo ? '/logout' : '/login'}`)
                         span.icon
